# exporter-litellm

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  ENV_VARS.md  LICENSE  POSTGRES_SETUP.md  README.md  docker-compose.yml  litellm_exporter.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: container-build.yml  docker-build.yml
k8s/: exporter-litellm.yaml
src/litellm_exporter/: __init__.py
src/litellm_exporter/config/: __init__.py
src/litellm_exporter/database/: __init__.py
src/litellm_exporter/metrics/: __init__.py
src/litellm_exporter/queries/: __init__.py
